Version 4.9.385.11 (cherry-pick)

Merged 8aeb6080e11548c018e898a078a162c23a45f7b8

Sloppy mode webcompat: allow conflicting function declarations in blocks

BUG=chromium:579395,v8:4693
LOG=N
TBR=hablich@chromium.org

Review URL: https://codereview.chromium.org/1621663003 .

Cr-Commit-Position: refs/branch-heads/4.9@{#13}
Cr-Branched-From: 2fea296569597e5064f81fd8fce58f1848de261a-refs/heads/4.9.385@{#1}
Cr-Branched-From: 0c1430ac2b65847559d6a09f883ee7e5a91063c9-refs/heads/master@{#33306}